added tests for employee, added lib for employee, fixed prompt function

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <main>
         <div class="row container justify-content-end col-9">
             <div class="col-sm">
-                <h2 class="text-success"> kelsei</h2>
-                <h4>453</h4>
+                <h2 class="text-success"> undefined</h2>
+                <h4>undefined</h4>
                 <div>
                     <h5>Contact Me!</h5>
-                    <a href="mailto:kkkelsei126@yahoo.com?subject=We have a problem!"
-                        target="_blank">kkkelsei126@yahoo.com</a>
-                    <p>My office is located here: lcd3</p>
+                    <a href="mailto:undefined?subject=We have a problem!"
+                        target="_blank">undefined</a>
+                    <p>My office is located here: undefined</p>
                 </div>
             </div>
         </div>
